MINOR: Small cleanups in server's tests